--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div id="main-body">
                     <h1 id="question-count"></h1>
                     <h2 id="question-display"></h2>
-                    <p id="response-display"></p>
+                    <div id="response-display"></div>
 
                 </div>
             </div>
