--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class="row">
             <div class="col">
                 <div id="main-body">
+                    <h2 id ="watch"></h2>
                     <h1 id="question-count"></h1>
                     <h2 id="question-display"></h2>
                     <div id="response-display"></div>
