--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
 
     </head>
@@ -23,8 +25,7 @@
     <header>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-3">Fluid jumbo heading</h1>
-                <p class="lead">Jumbo helper text</p>
+                <h1 class="display-4">Sci - Fi Trivia</h1>
             </div>
         </div>
     </header>
