finalizing styling for deployment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
+        <link rel="icon" href="assets/images/kisspng-drawing-human-brain-vector-graphics-sketch-cranium-la-cabeza-humana-grficos-vectoriales-g-5d31cab9b45bb9.2506895015635442497388.png">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
             integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
@@ -31,7 +32,7 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <div id="main-body">
                     <h2 id ="watch"></h2>
                     <h1 id="question-count"></h1>
@@ -40,9 +41,6 @@
 
                 </div>
             </div>
-
-        </div>
-        <div class="row">
 
         </div>
     </div>
